[gd_scene load_steps=8 format=3 uid="uid://b3kr2pv5dsl2e"]

[ext_resource type="Script" path="res://main.gd" id="1_020td"]
[ext_resource type="PackedScene" uid="uid://58xai2yrcjcr" path="res://game_info.tscn" id="2_ajil2"]
[ext_resource type="Script" path="res://custom_scroll_container.gd" id="4_y23rh"]

[sub_resource type="Animation" id="Animation_g0aun"]
resource_name = "feedback_fadeout"
length = 3.0
tracks/0/type = "bezier"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Control/Feedback:modulate:a")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"handle_modes": PackedInt32Array(0, 0, 0),
"points": PackedFloat32Array(1, -0.25, 0, 0.25, 0, 1, -0.25, 0, 0.25, 0, 0, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0, 2.2, 3)
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_d0fl2"]
_data = {
"feedback_fadeout": SubResource("Animation_g0aun")
}

[sub_resource type="Animation" id="Animation_btucf"]
resource_name = "feedback_fadeout"
length = 2.0
tracks/0/type = "bezier"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Control/Control/BackupFeedback:modulate:a")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"handle_modes": PackedInt32Array(0, 0, 0),
"points": PackedFloat32Array(1, -0.25, 0, 0.25, 0, 1, -0.25, 0, 0.25, 0, 0, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0, 1.1, 2)
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_nc433"]
_data = {
"feedback_fadeout": SubResource("Animation_btucf")
}

[node name="Main" type="Node"]
script = ExtResource("1_020td")
game_info_scene = ExtResource("2_ajil2")

[node name="FileDialog" type="FileDialog" parent="."]
unique_name_in_owner = true
title = "Open a Directory"
initial_position = 1
size = Vector2i(1000, 500)
borderless = true
ok_button_text = "Select Current Folder"
file_mode = 2
access = 2
show_hidden_files = true

[node name="Control" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="ColorRect" type="ColorRect" parent="Control"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.219948, 0.384078, 0.52459, 1)

[node name="Button" type="Button" parent="Control"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.1
anchor_top = 0.05
anchor_right = 0.3
anchor_bottom = 0.15
grow_horizontal = 2
grow_vertical = 2
focus_mode = 0
text = "Select AoCII folder..."

[node name="PathLabel" type="Label" parent="Control"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = -1
anchor_left = 0.35
anchor_top = 0.05
anchor_right = 0.9
anchor_bottom = 0.15
text = "No folder selected"
vertical_alignment = 1
autowrap_mode = 3

[node name="ErrorLabel" type="Label" parent="Control"]
unique_name_in_owner = true
visible = false
layout_mode = 1
anchors_preset = -1
anchor_left = 0.1
anchor_top = 0.25
anchor_right = 0.9
anchor_bottom = 0.7
theme_override_font_sizes/font_size = 36
text = "No valid save files found"
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 2

[node name="TopNodes" type="Control" parent="Control"]
unique_name_in_owner = true
layout_mode = 1
anchor_left = 0.05
anchor_top = 0.175
anchor_right = 0.95
anchor_bottom = 0.25
offset_bottom = -8.0
grow_horizontal = 2
grow_vertical = 2

[node name="Label1" type="Label" parent="Control/TopNodes"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = -1
anchor_right = 1.0
anchor_bottom = 1.0
text = "Save files:"
vertical_alignment = 2

[node name="RefreshButton" type="Button" parent="Control/TopNodes"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.3
anchor_right = 0.7
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
focus_mode = 0
text = "Refresh"

[node name="AllButton" type="Button" parent="Control/TopNodes"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.79
anchor_right = 0.89
anchor_bottom = 1.0
grow_horizontal = 0
grow_vertical = 2
focus_mode = 0
text = "Select All"

[node name="NoneButton" type="Button" parent="Control/TopNodes"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.9
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 0
grow_vertical = 2
focus_mode = 0
text = "Select None"

[node name="ScrollContainer" type="ScrollContainer" parent="Control"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.05
anchor_top = 0.25
anchor_right = 0.95
anchor_bottom = 0.7
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("4_y23rh")

[node name="HBoxContainer" type="HBoxContainer" parent="Control/ScrollContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="FixZeroRelations" type="Button" parent="Control"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = -1
anchor_left = 0.2
anchor_top = 0.8
anchor_right = 0.8
anchor_bottom = 0.95
focus_mode = 0
theme_override_font_sizes/font_size = 36
text = "Fix 0 relations bug"

[node name="Feedback" type="Label" parent="Control"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = -1
anchor_top = 0.7
anchor_right = 1.0
anchor_bottom = 0.8
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 24
text = "Outcome"
horizontal_alignment = 1
vertical_alignment = 1

[node name="HelpfulLabel" type="Label" parent="Control"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = -1
anchor_left = 0.05
anchor_top = 0.7
anchor_right = 0.95
anchor_bottom = 0.95
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 18
text = "Select one or more game saves to get started.
A new backup is automatically created every time you perform an operation on a save file."
horizontal_alignment = 1
vertical_alignment = 1

[node name="Control" type="Control" parent="Control"]
layout_mode = 1
anchor_left = 0.05
anchor_top = 0.7
anchor_right = 0.15
anchor_bottom = 0.95
grow_horizontal = 2
grow_vertical = 2

[node name="BackupFeedback" type="Label" parent="Control/Control"]
unique_name_in_owner = true
modulate = Color(0.5, 1, 0.5, 1)
layout_mode = 1
anchors_preset = -1
anchor_right = 1.0
anchor_bottom = 0.75
offset_bottom = -8.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 18
text = "+1 backup"
horizontal_alignment = 1
vertical_alignment = 2

[node name="BackupsButton" type="Button" parent="Control/Control"]
layout_mode = 1
anchors_preset = -1
anchor_top = 0.75
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
focus_mode = 0
text = "Backups"

[node name="DefaultRelationsSection" type="Control" parent="Control"]
unique_name_in_owner = true
layout_mode = 1
anchor_left = 0.85
anchor_top = 0.7
anchor_right = 0.95
anchor_bottom = 0.95
grow_horizontal = 2
grow_vertical = 2

[node name="ReplaceLabel" type="Label" parent="Control/DefaultRelationsSection"]
layout_mode = 1
anchors_preset = -1
anchor_right = 1.0
anchor_bottom = 0.75
offset_bottom = -8.0
grow_horizontal = 2
grow_vertical = 2
text = "Set bugged relations to:"
vertical_alignment = 2
autowrap_mode = 2

[node name="DefaultRelations" type="SpinBox" parent="Control/DefaultRelationsSection"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = -1
anchor_top = 0.75
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
min_value = -100.0
step = 0.0
value = 10.0
alignment = 1

[node name="FeedbackAnimation" type="AnimationPlayer" parent="."]
unique_name_in_owner = true
libraries = {
"": SubResource("AnimationLibrary_d0fl2")
}

[node name="BackupFbAnimation" type="AnimationPlayer" parent="."]
unique_name_in_owner = true
libraries = {
"": SubResource("AnimationLibrary_nc433")
}

[connection signal="dir_selected" from="FileDialog" to="." method="_on_file_dialog_dir_selected"]
[connection signal="pressed" from="Control/Button" to="." method="_on_button_pressed"]
[connection signal="pressed" from="Control/TopNodes/RefreshButton" to="." method="_on_refresh_button_pressed"]
[connection signal="pressed" from="Control/TopNodes/AllButton" to="." method="_on_all_button_pressed"]
[connection signal="pressed" from="Control/TopNodes/NoneButton" to="." method="_on_none_button_pressed"]
[connection signal="pressed" from="Control/FixZeroRelations" to="." method="_on_fix_zero_relations_pressed"]
[connection signal="pressed" from="Control/Control/BackupsButton" to="." method="_on_backups_button_pressed"]
[connection signal="value_changed" from="Control/DefaultRelationsSection/DefaultRelations" to="." method="_on_default_relations_value_changed"]
